# vmt

./: .cursorrules  .gitignore  API_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Current_Assessment.md  DEBUG_LOGGING_ENHANCEMENTS.md  DEBUG_LOGGING_OPTIONS.md  DEBUG_LOGGING_SYSTEM.md  EMOJI_SPRITE_IMPLEMENTATION_SUMMARY.md  GATE1_CHECKLIST.md  GATE3_CHECKLIST.md  GATE3_EVAL.md  GATE4_CHECKLIST.md  Gate_4_todos.md  LICENSE  MERGE_COMMIT_MESSAGE.md  Makefile  NOTICE  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  PHASE_0_COMPLETE.md  PHASE_3_2_COMPLETE.md  PLANNING_DOCUMENT.md  PRIORITY_1_TEST_IMPLEMENTATION_SUMMARY.md  PRIORITY_2_TEST_IMPLEMENTATION_SUMMARY.md  PR_SUMMARY.md  Planning Document Review.md  README.md  README_aspirational.md  README_backup_20251002_042844.md  READY_TO_MERGE.md  ROADMAP_REVISED.md  TASK2_COMPLETION_REPORT.md  Theory_Progression_Considerations.md  UTILITY_METRICS_COMPLETE.md  VMT_TIER1_CRITERIA_VERIFICATION_REPORT.md  Week 0 GUI Approach.md  comprehensive_workflow_tests.py  debug_agent_preferences.py  debug_delta_utility.py  (+37 more)
.github/: copilot-instructions-full.md  copilot-instructions.md
MANUAL_TESTS/: BATCH_RUNNER_BUG_FIXES.md  ENHANCED_LAUNCHER_IMPLEMENTATION_SUMMARY.md  FRAMEWORK_EXTENSIONS_COMPLETION_SUMMARY.md  FRAMEWORK_EXTENSIONS_README.md  FRAMEWORK_EXTENSION_OPTIONS.md  FRAMEWORK_IMPLEMENTATION_SUMMARY.md  LAUNCHER_GUIDE.md  README.md  batch_test_runner.py  batch_test_runner.py.backup  config_presets.json  debug_launcher.py  debug_panel_template.py  enhanced_test_launcher.py  enhanced_test_launcher_v2.py  enhanced_test_launcher_v2_backup_step2_2.py  enhanced_test_launcher_v2_backup_step2_3.py  enhanced_test_launcher_v2_backup_step2_4.py  enhanced_test_launcher_v2_backup_step2_5.py  enhanced_test_launcher_v2_backup_step2_6.py  example_custom_phases.py  launch_tests.py  live_config_editor.py  live_config_editor.py.backup  phase_config_editor.py  phase_examples_demo.py  run_test.py  temp_custom_test_20250927_112247.py  temp_custom_test_20250929_154348.py  test_1.py  test_1_baseline.py  test_1_baseline_simple.py  test_1_framework_version.py  test_2.py  test_2_framework_version.py  test_2_sparse_longrange.py  test_2_sparse_new.py  test_3.py  test_3_framework_version.py  test_3_highdensity_local.py  (+23 more)
ai_reflections/: claude_2025-09-28_2130.md  gpt5_2025-09-28_2135.md  session_workflow_reflection_2025-09-28.md  workflow_observations_2025-09-28.md
baselines/: CANONICAL_REFACTOR_BASELINE.md  TIER1_PERFORMANCE_REGRESSION_ANALYSIS.md  current_performance_oct2_2025.json  current_performance_status_oct2_2025.md  determinism_hashes.json  performance_baseline.json  tier1_fully_optimized.json  (+2 more)
(+759 files in other folders)
